<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="53dp"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:id="@+id/scorerName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="43"
        android:background="@drawable/back"
        android:gravity="center"
        android:text="@string/bablo"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scorerTeamName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="43"
        android:background="@drawable/back"
        android:gravity="center"
        android:text="@string/huuhkajat"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goals"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="14"
        android:background="@drawable/back"
        android:gravity="center"
        android:text="@string/_5"
        android:textStyle="bold" />

</LinearLayout>