<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/_19_09_2019"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/homeTeam"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="2"
            android:layout_weight="2"
            android:background="@drawable/back"
            android:text="@string/borussia_m_nchengladbach"/>

        <LinearLayout
            android:background="@drawable/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">


            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/_19_00"
                android:gravity="center"/>

            <LinearLayout
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/homeTeamGoals"
                    android:layout_marginStart="20dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/_2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/line"/>

                <TextView
                    android:id="@+id/awayTeamGoals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:text="@string/_2"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/awayTeam"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="2"
            android:layout_weight="2"
            android:background="@drawable/back"
            android:text="@string/borussia_m_nchengladbach"/>
    </LinearLayout>
</LinearLayout>